- Propagação de alterações no tratamento de exceções da camada de negócios.
- Renomeação do resource bundle usado nas páginas xhtml de 'msg' para 'global'.

--- a/presentation-jsf/src/main/webapp/templates/default/main.xhtml
+++ b/presentation-jsf/src/main/webapp/templates/default/main.xhtml
@@ -10,7 +10,7 @@
     <f:view locale="#{localeBean.locale}">
     <h:head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8"/>
-        <title><h:outputText value="#{msg['main.title']}"/></title>
+        <title><h:outputText value="#{global['main.title']}"/></title>
         <link rel="stylesheet" href="#{request.contextPath}/css/main.css"/>
         <link rel="stylesheet" href="#{request.contextPath}/css/custom_struts2_css_xhtml_theme.css"/>
         <ui:insert name="headAppend"/>
